Change the values of ERR and OK. This makes our getch() and related functions conform to SUSv2. Also fixes PR lib/15920.

XXX: This causes an API incompatability, but comes less than 27 hours after
     the libcurses major number was incremented, so should have minimal impact.